chore(release): bump version to 0.4.6
- Update __version__ to 0.4.6 in aivis_reader.py
- Restore FLAC metadata title generation to strip non-word chars except Japanese '。'
- Restore safe filename generation: use text before first '。', strip non-word chars, limit to 20 chars, fallback to "NoTitle"
- Use open()/sf.write for Windows path reliability and keep mutagen tagging (if installed)
- Minor logging improvements around save success/failure

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,9 @@ dist/
 Aivis_AudioLog/
 
 # ── 個人の設定・機密情報 ──
-# ユーザー固有の設定値（話者ID, ローカルパス, アーティスト名）を含むため除外。
-settings.py
+# ユーザー固有の設定値（話者ID, ローカルパス, アーティスト名等）を含むため除外。
+config.local.json
+
 # 各ユーザーがローカルで用意するアートワークファイルのため除外。
 cover.jpg
 
