--- a/config.json
+++ b/config.json
@@ -13,14 +13,10 @@
   "min_length": 10,
   "require_hiragana": true,
   "stop_command": ";;STOP",
-  "hotkeys": {
-    "stop": "ctrl+alt+s",
-    "pause": "ctrl+alt+p"
-  },
-  "tags": {
-    "artist": "YourVoiceAssistant",
-    "album_prefix": "Log"
-  },
+  "stop": "ctrl+alt+s",
+  "pause": "ctrl+alt+p",
+  "artist": "YourVoiceAssistant",
+  "album_prefix": "Log",
   "dictionary": {
     "Gemini": "ジェミニ",
     "ChatGPT": "チャットジーピーティー",
@@ -57,6 +53,9 @@
     ".txt": "テキスト",
     ".zip": "ジップ",
     "日付": "ひづけ",
+    "瞬殺": "しゅんさつ",
+    "焦る": "あせる",
+    "身体": "からだ",
     "分間": "ふんかん"
   }
 }
