READMEで読み仮名を追加、設定ファイルを更新

--- a/config.json
+++ b/config.json
@@ -25,6 +25,7 @@
     "Google": "グーグル",
     "YouTube": "ユーチューブ",
     "Amazon": "アマゾン",
+    "eo光": "イオひかり",
     "NG": "エヌジー",
     "OK": "オーケー",
     "GW": "ゴールデンウィーク",
