--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,5 +70,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: "*_win_x64.zip"
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
