fix: use cmd /c for build.bat in CI

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Verify Build Script (Dry Run)
         # 実際に exe を作れるか確認（ビルドエラーがないかチェック）
         run: |
-          build.bat
+          cmd /c build.bat
