--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,10 @@ line_length = 88
 multi_line_output = 3
 include_trailing_comma = true
 skip = ["dist", "build", ".venv", "__pycache__"]
+
+[tool.mypy]
+python_version = "3.11"
+warn_return_any = true
+warn_unused_configs = true
+ignore_missing_imports = true
+check_untyped_defs = true
