refactor: Organize root directory by moving scripts to scripts/

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run Build Script
         env:
           CI: true
-        run: .\build.bat
+        run: .\scripts\build.bat
 
       - name: Prepare Artifact
         shell: pwsh
